--- a/LoginPage/MainPage.xaml
+++ b/LoginPage/MainPage.xaml
@@ -5,8 +5,4 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LoginPage"
         mc:Ignorable="d"
-        Title="MainPage" Height="450" Width="800" Loaded="Window_Loaded">
-    <Frame Content="Frame" HorizontalAlignment="Left" Height="421" Margin="0,0,0,-1" VerticalAlignment="Top" Width="790" NavigationUIVisibility="Hidden"/>
-
-
-</Window>
+        Title="MainPage" Height="450" Width="800" Loaded="Window_Loaded"/>
