--- a/LoginPage/AddSectionWindow.xaml
+++ b/LoginPage/AddSectionWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="LoginPage.AddSectionWindow"
+﻿<Window x:Class="LoginPage.AddSectionWindow" WindowStartupLocation="CenterScreen"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,7 +9,7 @@
     <Grid Height="143" Margin="0,0,0.4,0.2" VerticalAlignment="Bottom" OpacityMask="#FFE02626">
         <Label Content="Section Name: " HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Width="163" FontSize="20"/>
         <TextBox x:Name="tbSectionName" Height="28" Margin="154,45,10,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <Button Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="101" Margin="112,95,0,0" Height="29" Click="Button_Click"/>
+        <Button Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="101" Margin="112,95,0,0" Height="29" Click="Button_Click" IsDefault="True"/>
 
     </Grid>
 </Window>
