--- a/LoginPage/AReviewBT.xaml
+++ b/LoginPage/AReviewBT.xaml
@@ -2,50 +2,35 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     >
     <Style TargetType="{x:Type Button}">
+        
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="FontFamily" Value="Helvetica"/>
         <Setter Property="FontWeight" Value="Light"/>
-       
         <Setter Property="Background" Value="Transparent"/>
+        
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="{TemplateBinding Background}" CornerRadius="20"
-                            BorderThickness="2"
-                            BorderBrush="White">
-
+                    <Border Background="{TemplateBinding Background}" CornerRadius="20" BorderThickness="2" BorderBrush="White">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center">
-                            
                         </ContentPresenter>
                     </Border>
-                    
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-       
+
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
                 <Setter Property="Background" Value="White" />
                 <Setter Property="Opacity" Value="0.5" />
                 <Setter Property="Foreground" Value="black" />
-
-
-
-                </Trigger>
-
+            </Trigger>
             <Trigger Property="Button.IsPressed" Value="true">
                 <Setter Property="Background" Value="Transparent"/>
                 <Setter Property="Foreground" Value="White" />
                 <Setter Property="Opacity" Value="1"/>
             </Trigger>
-           
         </Style.Triggers>
-
         
-       
     </Style>
-    
-    
-   
-  
 </ResourceDictionary>
