--- a/LoginPage/AddSectionWindow.xaml
+++ b/LoginPage/AddSectionWindow.xaml
@@ -5,11 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LoginPage"
         mc:Ignorable="d"
-        Title="AddSectionWindow" Height="172.964" Width="345.093">
+        Title="AddSectionWindow" Height="172.964" Width="345.093" WindowStyle="None">
     <Grid Height="143" Margin="0,0,0.4,0.2" VerticalAlignment="Bottom" OpacityMask="#FFE02626">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="25*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
         <Label Content="Section Name: " HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Width="163" FontSize="20"/>
-        <TextBox x:Name="tbSectionName" Height="28" Margin="154,45,10,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <Button Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="101" Margin="112,95,0,0" Height="29" Click="Button_Click" IsDefault="True"/>
+        <TextBox x:Name="tbSectionName" Height="28" Margin="154,45,9,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Button Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="101" Margin="112,95,0,0" Height="29" Click="Button_Click" IsDefault="True" Background="Violet"/>
 
     </Grid>
 </Window>
