--- a/LoginPage/AddSectionWindow.xaml
+++ b/LoginPage/AddSectionWindow.xaml
@@ -5,11 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LoginPage"
         mc:Ignorable="d"
-        Title="AddSectionWindow" Height="172.964" Width="345.093">
-    <Grid Height="143" Margin="0,0,0.4,0.2" VerticalAlignment="Bottom" OpacityMask="#FFE02626">
-        <Label Content="Section Name: " HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Width="163" FontSize="20"/>
-        <TextBox x:Name="tbSectionName" Height="28" Margin="154,45,10,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <Button Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="101" Margin="112,95,0,0" Height="29" Click="Button_Click" IsDefault="True"/>
+        Title="AddSectionWindow" Height="150" Width="345.093"
+        AllowsTransparency="True" WindowStyle="None" Background="Transparent">
+    <Grid>
+        <Border CornerRadius="20" Grid.RowSpan="2" Background="#FF9BBFA3">
 
+
+        </Border>
+        <Button x:Name="windowClose" Content="X" HorizontalAlignment="Right" VerticalAlignment="Top" Click="windowClose_Click" Width="40" Height="40" Margin="0,5,4.8,0"/>
+        <Grid  VerticalAlignment="Center">
+            
+
+            <Label Content="Section Name: " HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Width="163" FontSize="20"/>
+        <TextBox x:Name="tbSectionName" Height="28" Margin="154,45,10,0" TextWrapping="Wrap" VerticalAlignment="Top" Background="Transparent" BorderThickness="0" FontSize="25"/>
+        <Button Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="101" Margin="112,95,0,0" Height="29" Click="Button_Click" IsDefault="True"/>
+        
+        </Grid>
     </Grid>
 </Window>
