--- a/LoginPage/FeedBackPage.xaml
+++ b/LoginPage/FeedBackPage.xaml
@@ -54,7 +54,9 @@
             </ListView.View>
         </ListView>
         <Button x:Name="btnFinish" Content="Finish Group and Send Feedback" HorizontalAlignment="Left" Margin="583,416,0,10" Width="190" Click="btnFinish_Click"/>
-        <Button x:Name="btnSaveFeedback" Content="Save Applicant Feedback" HorizontalAlignment="Left" Margin="418,416,0,10" Width="141" Click="btnSaveFeedback_Click"/>
+        <Button x:Name="btnSaveFeedback" Content="Save Applicant Feedback" HorizontalAlignment="Left" Margin="428,416,0,10" Width="141" Click="btnSaveFeedback_Click"/>
         <Label Content="Template Subject: Random" HorizontalAlignment="Left" Margin="253,60,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnClearSelections" Content="Clear Current" HorizontalAlignment="Left" Margin="214,416,0,0" VerticalAlignment="Top" Width="92" Height="24" Click="ClearSelected_Click"/>
+        <Button x:Name="btnRestore" Content="Restore Previous" HorizontalAlignment="Left" Margin="311,416,0,0" VerticalAlignment="Top" Width="102" Height="24" Click="Restore_Click"/>
     </Grid>
 </Page>
