--- a/LoginPage/ManageTemplatesPage.xaml
+++ b/LoginPage/ManageTemplatesPage.xaml
@@ -8,12 +8,34 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ManageTemplatesPage">
 
-    <Grid Background="#FF4BCDBB">
-        <Button Content="Back" HorizontalAlignment="Left" Margin="40,336,0,0" VerticalAlignment="Top" Width="161" Height="41" FontSize="18" Click="Button_Click_1"/>
-        <Button Content="Edit" HorizontalAlignment="Left" Margin="561,282,0,0" VerticalAlignment="Top" Width="166" Height="42" FontSize="18" Click="Button_Click"/>
-        <ListBox Name="templatesListBox" HorizontalAlignment="Left" Height="238" Margin="252,85,0,0" VerticalAlignment="Top" Width="280" SelectionChanged="ListBox_SelectionChanged" SelectionMode="Single" Loaded="ListBox_Loaded"/>
+    <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                <GradientStop Color="#FF77346E"/>
+                <GradientStop Color="#FFAC20F1" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="258*"/>
+            <RowDefinition Height="191*"/>
+        </Grid.RowDefinitions>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="40,77.8,0,0" VerticalAlignment="Top" Width="161" Height="41" FontSize="18" Click="Button_Click_1" Grid.Row="1"/>
+        <Button Content="Edit" HorizontalAlignment="Left" Margin="561,23.8,0,0" VerticalAlignment="Top" Width="166" Height="42" FontSize="18" Click="Button_Click" Grid.Row="1" Tag="3"/>
+        <ListBox Name="templatesListBox" HorizontalAlignment="Left" Height="262" Margin="252,85,0,0" VerticalAlignment="Top" Width="280" SelectionMode="Single" Loaded="ListBox_Loaded" Grid.RowSpan="2" BorderBrush="White" BorderThickness="3" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+            <ListBox.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="10"/>
+                </Style>
+            </ListBox.Resources>
+            <ListBox.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF842F8D" Offset="0"/>
+                    <GradientStop Color="#FF9E25CE" Offset="1"/>
+                </LinearGradientBrush>
+            </ListBox.Background>
+        </ListBox>
 
-        <Button Content="New from selected" HorizontalAlignment="Left" Margin="561,217,0,0" VerticalAlignment="Top" Width="166" Height="41" FontSize="18" Click="Button_Click"/>
-        <Button x:Name="bt_CreateNewTemplate" Content="Create New Template" HorizontalAlignment="Left" Margin="561,148,0,0" VerticalAlignment="Top" Width="166" Height="42" FontSize="18" Click="Button_Click"/>
+        <Button Content="New from selected" HorizontalAlignment="Left" Margin="561,207,0,0" VerticalAlignment="Top" Width="166" Height="41" FontSize="18" Click="Button_Click2" Tag="2"/>
+        <Button x:Name="bt_CreateNewTemplate" Content="Create New Template" HorizontalAlignment="Left" Margin="561,128,0,0" VerticalAlignment="Top" Width="166" Height="42" FontSize="18" Click="Button_Click" Tag="1"/>
     </Grid>
 </Page>
