--- a/LoginPage/CreateNewSectionPage.xaml
+++ b/LoginPage/CreateNewSectionPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:LoginPage"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="700" d:DesignWidth="1200"
       Title="CreateNewSectionPage">
 
     <Grid>
@@ -20,14 +20,15 @@
                 <GradientStop Color="#FF6D15E8" Offset="1"/>
                 <GradientStop Color="#FFA02EE2" Offset="0.722"/>
             </LinearGradientBrush>
-
         </Grid.Background>
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="148*"/>
             <RowDefinition Height="301*"/>
         </Grid.RowDefinitions>
-        <Button x:Name="bt_goBack" Content="Back" HorizontalAlignment="Left" Margin="35,35,0,0" VerticalAlignment="Top" Width="161" Height="41" FontSize="18" Click="bt_goBack_Click"/>
-        <ListBox x:Name="sectionsListBox" HorizontalAlignment="Left" Height="226" Margin="109,101,0,0" VerticalAlignment="Top" Width="269" Loaded="sectionsListBox_Loaded" Grid.RowSpan="2" BorderBrush="#FFFDFEFF" BorderThickness="3" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible">
+        
+        <Button x:Name="bt_goBack" Content="Back" HorizontalAlignment="Left" Margin="49,0,0,42" VerticalAlignment="Bottom" Width="250" Height="65" FontSize="30" Click="bt_goBack_Click" Grid.Row="1"/>
+        <ListBox x:Name="sectionsListBox" HorizontalAlignment="Center" Height="382" Margin="69,101,449,217" VerticalAlignment="Center" Width="331" Loaded="sectionsListBox_Loaded" Grid.RowSpan="2" BorderBrush="#FFFDFEFF" BorderThickness="3" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible">
             <ListBox.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFD21AEA" Offset="0"/>
@@ -41,7 +42,7 @@
                 </Style>
             </ListBox.Resources>
         </ListBox>
-        <ListBox x:Name="commentsListBox" HorizontalAlignment="Left" Height="92" Margin="434,101,0,0" VerticalAlignment="Top" Width="269" Grid.RowSpan="2" BorderBrush="#FFFDFEFF" BorderThickness="3" Grid.ColumnSpan="2" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+        <ListBox x:Name="commentsListBox" HorizontalAlignment="Center" Height="92" Margin="434,129,97,10" VerticalAlignment="Center" Width="669" BorderBrush="#FFFDFEFF" BorderThickness="3" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.ColumnSpan="2">
             <ListBox.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFD11BEA" Offset="0"/>
@@ -54,14 +55,15 @@
                 </Style>
             </ListBox.Resources>
         </ListBox>
-        <Button Content="Add section" HorizontalAlignment="Left" Margin="109,186,0,0" VerticalAlignment="Top" Width="122" Height="41" FontSize="18" Click="Button_Click" Grid.Row="1"/>
-        <Button x:Name="bt_comment" Content="Add Comment" HorizontalAlignment="Left" Margin="434,186,0,0" VerticalAlignment="Top" Width="122" Height="41" FontSize="18" Grid.Row="1" Click="bt_comment_Click" IsEnabled="False" RenderTransformOrigin="-0.086,0.683"/>
-        <Border CornerRadius="5" BorderThickness="3" BorderBrush="White" Margin="434,53,97,122.6" Grid.ColumnSpan="2" Grid.Row="1">
-            <TextBlock x:Name="text_box" Background="White" TextWrapping="Wrap"></TextBlock>
-
+        <Button Content="Add section" HorizontalAlignment="Center" Margin="69,279,635,140" VerticalAlignment="Center" Width="145" Height="50" FontSize="25" Click="Button_Click" Grid.Row="1"/>
+        <Button x:Name="bt_comment" Content="Add Comment" HorizontalAlignment="Center" Margin="434,277,165,142" VerticalAlignment="Center" Width="250" Height="50" FontSize="30" Grid.Row="1" Click="bt_comment_Click" IsEnabled="False" RenderTransformOrigin="-0.086,0.683"/>
+        <Border CornerRadius="5" BorderThickness="3" BorderBrush="White" Margin="434,67,97,217" Grid.ColumnSpan="2" Grid.Row="1" >
+            <TextBlock x:Name="text_box" Background="White" TextWrapping="Wrap" Margin="0,-3"></TextBlock>
         </Border>
-        <Button Content="Delete section" HorizontalAlignment="Left" Margin="252,186,0,0" VerticalAlignment="Top" Width="126" Height="41" FontSize="18" Click="bt_Delete_Section" Grid.Row="1"/>
-        <Button x:Name="bt_delete_Comment_" Content="Delete Comment" HorizontalAlignment="Left" Margin="566,186,0,0" VerticalAlignment="Top" Width="137" Height="41" FontSize="18" Grid.Row="1" IsEnabled="False" RenderTransformOrigin="-0.086,0.683" Grid.ColumnSpan="2" Click="bt_Delete_Comment"/>
+        <Button Content="Delete section" HorizontalAlignment="Center" Margin="240,277,449,142" VerticalAlignment="Center" Width="160" Height="50" FontSize="25" Click="bt_Delete_Section" Grid.Row="1"/>
+        <Button x:Name="bt_delete_Comment_" Content="Delete Comment" HorizontalAlignment="Center" Margin="4,279,97,140" VerticalAlignment="Center" Width="250" Height="50" FontSize="30" Grid.Row="1" IsEnabled="False" RenderTransformOrigin="-0.086,0.683" Click="bt_Delete_Comment" Grid.Column="1"/>
+        <Button x:Name="btnMaximise" Grid.ColumnSpan="2" Content="+" HorizontalAlignment="Right" Margin="0,10,18,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Maximise_Click"/>
+        <Button x:Name="btnMinimise" Grid.ColumnSpan="2" Content="-" HorizontalAlignment="Right" Margin="0,10,83,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Minimise_Click"/>
 
     </Grid>
 </Page>
