--- a/LoginPage/CreateNewTemplate.xaml
+++ b/LoginPage/CreateNewTemplate.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:LoginPage"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="700" d:DesignWidth="1200"
       Title="CreateNewTemplate">
 
     <Grid>
@@ -20,7 +20,7 @@
                 <GradientStop Color="#FF5645C0"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <ListBox x:Name="list_box" HorizontalAlignment="Left" Height="281" Margin="279,105,0,0" VerticalAlignment="Top" Width="282" BorderBrush="White" BorderThickness="3" Loaded="list_box_Loaded" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" Grid.ColumnSpan="2">
+        <ListBox x:Name="list_box" HorizontalAlignment="Center" Height="401" Margin="382,160,354,139" VerticalAlignment="Center" Width="464" BorderBrush="White" BorderThickness="3" Loaded="list_box_Loaded" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" Grid.ColumnSpan="2">
             <ListBox.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="10"/>
@@ -34,11 +34,14 @@
                 </LinearGradientBrush>
             </ListBox.Background>
         </ListBox>
-        <Label Content="Template name:" HorizontalAlignment="Left" Margin="126,27,0,0" VerticalAlignment="Top" FontSize="30" Foreground="White" />
+        <Label Content="Template name:" HorizontalAlignment="Center" Margin="265,47,221,0" VerticalAlignment="Top" FontSize="48" Foreground="White" />
 
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="36" Margin="369,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="240" FontSize="24" Grid.ColumnSpan="2"/>
-        <Button Content="Submit" HorizontalAlignment="Left" Margin="49.4,385,0,0" VerticalAlignment="Top" Width="157" Height="40" Click="Submit" Grid.Column="1"/>
-        <Button x:Name="bt_cancel" Content="Back" HorizontalAlignment="Left" Margin="79,385,0,0" VerticalAlignment="Top" Width="157" Height="40" Click="Button_Click"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Center" Height="36" Margin="632,74,240,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="328" FontSize="24" Grid.ColumnSpan="2"/>
+        <Button Content="Submit" HorizontalAlignment="Right" Margin="0,0,30,50" VerticalAlignment="Bottom" Width="250" Height="65" Click="Submit" FontSize="30" Grid.Column="1"/>
+        <Button x:Name="bt_cancel" Content="Back" HorizontalAlignment="Left" Margin="55,0,0,50" VerticalAlignment="Bottom" Width="250" Height="65" FontSize="30" Click="Button_Click"/>
+        <Button x:Name="btnMaximise" Grid.ColumnSpan="2" Content="+" HorizontalAlignment="Right" Margin="0,10,18,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Maximise_Click"/>
+        <Button x:Name="btnMinimise" Grid.ColumnSpan="2" Content="-" HorizontalAlignment="Right" Margin="0,10,83,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Minimise_Click"/>
+        <Label Content="Select the desired sections for the template." HorizontalAlignment="Center" Margin="407,578,11,85" VerticalAlignment="Center" FontSize="20" Foreground="Gray" Width="412" />
 
     </Grid>
 </Page>
