--- a/LoginPage/DashboardPage.xaml
+++ b/LoginPage/DashboardPage.xaml
@@ -5,23 +5,24 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:LoginPage"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="700" d:DesignWidth="1200"
       Title="DashboardPage">
 
-    <Grid Background="#FF9BBFA3">
+    <Grid Background="#FF9BBFA3" Margin="0,0,2,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
 
-        <Label Content="Dashboard" HorizontalAlignment="Left" Margin="264,39,0,0" VerticalAlignment="Top" Height="43" Width="207" FontSize="24" Grid.ColumnSpan="2" HorizontalContentAlignment="Center"/>
-        <Button x:Name="btnCreateSection" Content="Create New Section" HorizontalAlignment="Left" Margin="475,317,0,0" VerticalAlignment="Top" Width="199" FontSize="18" Height="42" Click="btnCreateSection_Click" Grid.ColumnSpan="2"/>
-        <Button x:Name="btnManageTemps" Content="Manage templates" HorizontalAlignment="Left" Margin="227,188,0,0" VerticalAlignment="Top" Width="199" FontSize="18" Height="42" Click="btnManageTemps_Click" Grid.ColumnSpan="2"/>
-        <Button x:Name="btnManageCandidates" Content="Manage candidates" HorizontalAlignment="Left" Margin="370,253,0,0" VerticalAlignment="Top" Width="198" FontSize="18" Height="42" Grid.ColumnSpan="2" Click="btnManageCandidates_Click" />
+        <Label Content="Dashboard" HorizontalAlignment="Center" Margin="411,30,459,0" VerticalAlignment="Top" Height="81" Width="366" FontSize="48" Grid.ColumnSpan="2" HorizontalContentAlignment="Center"/>
 
-        <Button x:Name="btnToFeedback" Content="Proceed to Feedback" HorizontalAlignment="Left" Margin="107,124,0,0" VerticalAlignment="Top" Width="199" FontSize="18" Height="42" Click="btnToFeedback_Click" Grid.ColumnSpan="2"/>
-        <Button x:Name="btnLogout" Content="Logout" HorizontalAlignment="Center"  VerticalAlignment="Bottom" Width="199" FontSize="18" Height="42" Click="btnLogout_Click" Grid.ColumnSpan="2"/>
-
+        <Button x:Name="btnCreateSection" Content="Create New Section" HorizontalAlignment="Center" Margin="787,501,105,129" VerticalAlignment="Center" Width="306" FontSize="30" Height="70" Click="btnCreateSection_Click" Grid.ColumnSpan="2"/>
+        <Button x:Name="btnManageTemps" Content="Manage templates" HorizontalAlignment="Center" Margin="541,385,351,245" VerticalAlignment="Center" Width="306" FontSize="30" Height="70" Click="btnManageTemps_Click" Grid.ColumnSpan="2"/>
+        <Button x:Name="btnManageCandidates" Content="Manage candidates" HorizontalAlignment="Center" Margin="328,270,564,360" VerticalAlignment="Center" Width="306" FontSize="30" Height="70" Grid.ColumnSpan="2" Click="btnManageCandidates_Click" />
+        <Button x:Name="btnToFeedback" Content="Proceed to Feedback" HorizontalAlignment="Center" Margin="127,150,765,480" VerticalAlignment="Center" Width="306" FontSize="30" Height="70" Click="btnToFeedback_Click" Grid.ColumnSpan="2"/>
+        <Button x:Name="btnLogout" Content="Logout" HorizontalAlignment="Center"  VerticalAlignment="Bottom" Width="200" FontSize="30" Height="58" Click="btnLogout_Click" Grid.ColumnSpan="2" Margin="487,0,511,32"/>
+        <Button x:Name="btnMaximise" Grid.ColumnSpan="2" Content="+" HorizontalAlignment="Right" Margin="0,10,18,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Maximise_Click"/>
+        <Button x:Name="btnMinimise" Grid.ColumnSpan="2" Content="-" HorizontalAlignment="Right" Margin="0,10,83,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Minimise_Click"/>
     </Grid>
 </Page>
