--- a/LoginPage/FeedBackPage.xaml
+++ b/LoginPage/FeedBackPage.xaml
@@ -5,47 +5,47 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:LoginPage"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="700" d:DesignWidth="1200"
       Title="FeedBackPage">
 
     <Grid Background="#FF389CA0" Loaded="Grid_Loaded">
-        <ListBox x:Name="applicantListBox" HorizontalAlignment="Left" Height="304" Margin="22,93,0,0" VerticalAlignment="Top" Width="170"/>
-        <Button x:Name="btnCancel" Content="Back" HorizontalAlignment="Left" Margin="10,416,0,10" Width="141" Click="btnCancel_Click"/>
-        <Label Content="Template: Random" HorizontalAlignment="Left" Margin="253,29,0,0" VerticalAlignment="Top"/>
-        <Label Content="Job Position: Random" HorizontalAlignment="Left" Margin="583,29,0,0" VerticalAlignment="Top"/>
-        <Label Content="User: Random" HorizontalAlignment="Left" Margin="583,60,0,0" VerticalAlignment="Top"/>
-        <ListView x:Name="feedbackListView" HorizontalAlignment="Left" Height="304" Margin="214,93,0,0" VerticalAlignment="Top" Width="559" ItemsSource="{Binding sections}">
+        <ListBox x:Name="applicantListBox" HorizontalAlignment="Center" Height="461" Margin="39,141,909,98" VerticalAlignment="Center" Width="252"/>
+        <Button x:Name="btnCancel" Content="Back" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,10" Width="175" Height="55" FontSize="30" Click="btnCancel_Click"/>
+        <Label Content="Template: Random" HorizontalAlignment="Center" Margin="311,33,700,630" VerticalAlignment="Center" FontSize="20" Width="189"/>
+        <Label Content="Job Position: Random" HorizontalAlignment="Center" Margin="778,33,222,630" VerticalAlignment="Center" FontSize="20" Height="37"/>
+        <Label Content="User: Random" HorizontalAlignment="Center" Margin="778,85,288,578" VerticalAlignment="Center" FontSize="20" Height="37"/>
+        <ListView x:Name="feedbackListView" HorizontalAlignment="Center" Height="461" Margin="311,141,18,98" VerticalAlignment="Center" Width="871" ItemsSource="{Binding sections}" FontSize="20">
             <ListView.View>
                 <GridView>
 
-                    <GridViewColumn Header="Section Name" DisplayMemberBinding="{Binding sectionName}" Width="120">
+                    <GridViewColumn Header="Section Name" DisplayMemberBinding="{Binding sectionName}" Width="200">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBox TextAlignment="Center"></TextBox>
+                                <TextBox TextAlignment="Center" FontSize="20" Foreground="Black"></TextBox>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
 
-                    <GridViewColumn Header="Comment Selection" Width="233">
+                    <GridViewColumn Header="Comment Selection" Width="314">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <ComboBox Width="218" Loaded="ComboBox_Loaded"></ComboBox>
+                                <ComboBox Width="295" Loaded="ComboBox_Loaded"></ComboBox>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
 
-                    <GridViewColumn Header="Preview Comment" Width="100">
+                    <GridViewColumn Header="Preview Comment" Width="175">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Content="Preview" Style="{StaticResource ListBoxButton}" Width="90" Loaded="PreviewButton_Loaded" Click="PreviewComment"></Button>
+                                <Button Content="Preview" Style="{StaticResource ListBoxButton}" Width="165" Loaded="PreviewButton_Loaded" Click="PreviewComment"></Button>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
 
-                    <GridViewColumn Header="Custom Comment" Width="100">
+                    <GridViewColumn Header="Custom Comment" Width="175">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Content="Add" Style="{StaticResource ListBoxButton}" Width="90" Loaded="AddButton_Loaded" Click="AddCustomComment"></Button>
+                                <Button Content="Add" Style="{StaticResource ListBoxButton}" Width="165" Loaded="AddButton_Loaded" Click="AddCustomComment"></Button>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
@@ -53,10 +53,13 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button x:Name="btnFinish" Content="Finish Group and Send Feedback" HorizontalAlignment="Left" Margin="583,416,0,10" Width="190" Click="btnFinish_Click"/>
-        <Button x:Name="btnSaveFeedback" Content="Save Applicant Feedback" HorizontalAlignment="Left" Margin="428,416,0,10" Width="141" Click="btnSaveFeedback_Click"/>
-        <Label Content="Template Subject: Random" HorizontalAlignment="Left" Margin="253,60,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnClearSelections" Content="Clear Current" HorizontalAlignment="Left" Margin="214,416,0,0" VerticalAlignment="Top" Width="92" Height="24" Click="ClearSelected_Click"/>
-        <Button x:Name="btnRestore" Content="Restore Previous" HorizontalAlignment="Left" Margin="311,416,0,0" VerticalAlignment="Top" Width="102" Height="24" Click="Restore_Click"/>
+        <Button x:Name="btnFinish" Content="Finish Group and Send Feedback" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,10,10" Width="390" Height="54" FontSize="27" Click="btnFinish_Click"/>
+        <Button x:Name="btnSaveFeedback" Content="Save Applicant Feedback" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,408,10" Width="292" Height="55" FontSize="27" Click="btnSaveFeedback_Click"/>
+        <Label Content="Template Subject: Random" HorizontalAlignment="Center" Margin="311,85,644,578" VerticalAlignment="Center" FontSize="20"/>
+        <Button x:Name="btnClearSelections" Content="Clear Current" HorizontalAlignment="Right" Margin="0,0,870,10" VerticalAlignment="Bottom" Width="140" Height="55" FontSize="20" Click="ClearSelected_Click"/>
+        <Button x:Name="btnRestore" Content="Restore Previous" HorizontalAlignment="Right" Margin="0,0,705,10" VerticalAlignment="Bottom" Width="160" Height="55" FontSize="20" Click="Restore_Click"/>
+        <Button x:Name="btnMaximise" Grid.ColumnSpan="2" Content="+" HorizontalAlignment="Right" Margin="0,10,18,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Maximise_Click"/>
+        <Button x:Name="btnMinimise" Grid.ColumnSpan="2" Content="-" HorizontalAlignment="Right" Margin="0,10,83,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Minimise_Click"/>
+        <Label Content="Applicants:" HorizontalAlignment="Center" Margin="39,94,1003,561" VerticalAlignment="Center" Width="158" Height="45" FontSize="25"/>
     </Grid>
 </Page>
