--- a/LoginPage/ManageTemplatesPage.xaml
+++ b/LoginPage/ManageTemplatesPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:LoginPage"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="700" d:DesignWidth="1200"
       Title="ManageTemplatesPage">
 
     <Grid>
@@ -19,9 +19,9 @@
             <RowDefinition Height="258*"/>
             <RowDefinition Height="191*"/>
         </Grid.RowDefinitions>
-        <Button Content="Back" HorizontalAlignment="Left" Margin="40,77.8,0,0" VerticalAlignment="Top" Width="161" Height="41" FontSize="18" Click="Button_Click_1" Grid.Row="1"/>
-        <Button Content="Edit" HorizontalAlignment="Left" Margin="561,23.8,0,0" VerticalAlignment="Top" Width="166" Height="42" FontSize="18" Click="Button_Click3" Grid.Row="1" Tag="3"/>
-        <ListBox Name="templatesListBox" HorizontalAlignment="Left" Height="262" Margin="252,85,0,0" VerticalAlignment="Top" Width="280" SelectionMode="Single" Loaded="ListBox_Loaded" Grid.RowSpan="2" BorderBrush="White" BorderThickness="3" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+        <Button Content="Back" HorizontalAlignment="Left" Margin="42,0,0,30" VerticalAlignment="Bottom" Width="250" Height="65" FontSize="30" Click="Button_Click_1" Grid.Row="1"/>
+        <Button Content="Edit" HorizontalAlignment="Right" Margin="0,0,40,30" VerticalAlignment="Bottom" Width="250" Height="65" FontSize="30" Click="Button_Click3" Grid.Row="1" Tag="3"/>
+        <ListBox Name="templatesListBox" HorizontalAlignment="Center" Height="456" Margin="347,108,349,136" VerticalAlignment="Center" Width="504" SelectionMode="Single" Loaded="ListBox_Loaded" Grid.RowSpan="2" BorderBrush="White" BorderThickness="3" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListBox.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="10"/>
@@ -35,7 +35,10 @@
             </ListBox.Background>
         </ListBox>
 
-        <Button Content="New from selected" HorizontalAlignment="Left" Margin="561,207,0,0" VerticalAlignment="Top" Width="166" Height="41" FontSize="18" Click="Button_Click2" Tag="2"/>
-        <Button x:Name="bt_CreateNewTemplate" Content="Create New Template" HorizontalAlignment="Left" Margin="561,128,0,0" VerticalAlignment="Top" Width="166" Height="42" FontSize="18" Click="Button_Click" Tag="1"/>
+        <Button Content="New from selected" HorizontalAlignment="Center" Margin="891,368,59,278" VerticalAlignment="Center" Width="250" Height="54" FontSize="25" Click="Button_Click2" Tag="2" Grid.RowSpan="2"/>
+        <Button x:Name="bt_CreateNewTemplate" Content="Create New Template" HorizontalAlignment="Center" Margin="891,190,59,162" VerticalAlignment="Center" Width="250" Height="50" FontSize="25" Click="Button_Click" Tag="1"/>
+        <Label Content="Tempates:" HorizontalAlignment="Center" Margin="422,22,412,0" VerticalAlignment="Top" Height="81" Width="366" FontSize="45" HorizontalContentAlignment="Center"/>
+        <Button x:Name="btnMaximise" Grid.ColumnSpan="2" Content="+" HorizontalAlignment="Right" Margin="0,10,18,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Maximise_Click"/>
+        <Button x:Name="btnMinimise" Grid.ColumnSpan="2" Content="-" HorizontalAlignment="Right" Margin="0,10,83,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Minimise_Click"/>
     </Grid>
 </Page>
