--- a/LoginPage/ProceedFeedbackPage.xaml
+++ b/LoginPage/ProceedFeedbackPage.xaml
@@ -5,17 +5,18 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:LoginPage"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="700" d:DesignWidth="1200"
       Title="ProceedFeedbackPage">
 
     <Grid Background="#FFD3DC7B" Loaded="Grid_Loaded">
-        <Button Content="Back" HorizontalAlignment="Left" Margin="39,336,0,0" VerticalAlignment="Top" Width="161" Height="41" FontSize="18" Click="Button_Click"/>
-        <ComboBox x:Name="selectJobDropdown" Background="Transparent" 
-                  HorizontalAlignment="Left" Margin="302,159,0,0" VerticalAlignment="Top" Width="219" Height="29"/>
-        <ComboBox x:Name="selectTemplateDropdown" Background="Transparent" HorizontalAlignment="Left" Margin="302,261,0,0" VerticalAlignment="Top" Width="219" Height="29"/>
-        <Label Content="Job position:" HorizontalAlignment="Left" Margin="143,159,0,0" VerticalAlignment="Top" Height="42" Width="122" FontSize="18"/>
-        <Label Content="Template:" HorizontalAlignment="Left" Margin="143,261,0,0" VerticalAlignment="Top" Width="122" Height="40" FontSize="18"/>
-        <Button x:Name="btnProceed" Content="Proceed" HorizontalAlignment="Left" Margin="606,336,0,0" VerticalAlignment="Top" Width="161" Height="41" FontSize="18" Click="btnProceed_Click"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="45,0,0,34" VerticalAlignment="Bottom" Width="250" Height="55" FontSize="30" Click="Button_Click"/>
+        <ComboBox x:Name="selectJobDropdown" Background="Transparent" HorizontalAlignment="Center" Margin="577,239,255,416" VerticalAlignment="Center" Width="368" Height="45" FontSize="20"/>
+        <ComboBox x:Name="selectTemplateDropdown" Background="Transparent" HorizontalAlignment="Center" Margin="577,391,255,264" VerticalAlignment="Center" Width="368" Height="45" FontSize="20"/>
+        <Label Content="Job position:" HorizontalAlignment="Center" Margin="270,239,710,397" VerticalAlignment="Center" Height="64" Width="220" FontSize="30"/>
+        <Label Content="Template:" HorizontalAlignment="Center" Margin="270,391,678,247" VerticalAlignment="Center" Width="252" Height="62" FontSize="30"/>
+        <Button x:Name="btnProceed" Content="Proceed" HorizontalAlignment="Right" Margin="0,0,18,34" VerticalAlignment="Bottom" Width="250" Height="55" FontSize="30" Click="btnProceed_Click"/>
+        <Button x:Name="btnMaximise" Grid.ColumnSpan="2" Content="+" HorizontalAlignment="Right" Margin="0,10,18,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Maximise_Click"/>
+        <Button x:Name="btnMinimise" Grid.ColumnSpan="2" Content="-" HorizontalAlignment="Right" Margin="0,10,83,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Minimise_Click"/>
 
     </Grid>
 </Page>
