--- a/LoginPage/CreateNewSectionPage.xaml
+++ b/LoginPage/CreateNewSectionPage.xaml
@@ -21,14 +21,14 @@
                 <GradientStop Color="#FFA02EE2" Offset="0.722"/>
             </LinearGradientBrush>
         </Grid.Background>
-        
+
         <Grid.RowDefinitions>
             <RowDefinition Height="148*"/>
             <RowDefinition Height="301*"/>
         </Grid.RowDefinitions>
-        
+
         <Button x:Name="bt_goBack" Content="Back" HorizontalAlignment="Left" Margin="49,0,0,42" VerticalAlignment="Bottom" Width="250" Height="65" FontSize="30" Click="bt_goBack_Click" Grid.Row="1"/>
-        <ListBox x:Name="sectionsListBox" HorizontalAlignment="Center" Height="382" Margin="69,101,449,217" VerticalAlignment="Center" Width="331" Loaded="sectionsListBox_Loaded" Grid.RowSpan="2" BorderBrush="#FFFDFEFF" BorderThickness="3" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible">
+        <ListBox x:Name="sectionsListBox" HorizontalAlignment="Center" Height="382" Margin="69,101,449,217" VerticalAlignment="Center" Width="331" Loaded="sectionsListBox_Loaded" Grid.RowSpan="2" BorderBrush="#FFFDFEFF" BorderThickness="3" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" SelectionChanged="sectionsListBox_SelectionChanged">
             <ListBox.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFD21AEA" Offset="0"/>
@@ -42,7 +42,7 @@
                 </Style>
             </ListBox.Resources>
         </ListBox>
-        <ListBox x:Name="commentsListBox" HorizontalAlignment="Center" Height="92" Margin="434,129,97,10" VerticalAlignment="Center" Width="669" BorderBrush="#FFFDFEFF" BorderThickness="3" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.ColumnSpan="2">
+        <ListBox x:Name="commentsListBox" HorizontalAlignment="Center" Height="169" Margin="434,101,97,430" VerticalAlignment="Center" Width="669" BorderBrush="#FFFDFEFF" BorderThickness="3" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.ColumnSpan="2" Grid.RowSpan="2" SelectionChanged="commentsListBox_SelectionChanged">
             <ListBox.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFD11BEA" Offset="0"/>
@@ -57,8 +57,8 @@
         </ListBox>
         <Button Content="Add section" HorizontalAlignment="Center" Margin="69,279,635,140" VerticalAlignment="Center" Width="145" Height="50" FontSize="25" Click="Button_Click" Grid.Row="1"/>
         <Button x:Name="bt_comment" Content="Add Comment" HorizontalAlignment="Center" Margin="434,277,165,142" VerticalAlignment="Center" Width="250" Height="50" FontSize="30" Grid.Row="1" Click="bt_comment_Click" IsEnabled="False" RenderTransformOrigin="-0.086,0.683"/>
-        <Border CornerRadius="5" BorderThickness="3" BorderBrush="White" Margin="434,67,97,217" Grid.ColumnSpan="2" Grid.Row="1" >
-            <TextBlock x:Name="text_box" Background="White" TextWrapping="Wrap" Margin="0,-3"></TextBlock>
+        <Border CornerRadius="5" BorderThickness="3" BorderBrush="White" Margin="434,66.6,97,217" Grid.ColumnSpan="2" Grid.Row="1"  VerticalAlignment="Center" HorizontalAlignment="Center" Height="186" Width="668.8" >
+            <TextBlock x:Name="text_box" Background="White" TextWrapping="Wrap" Margin="-0.2,-2.2,-0.4,-0.6"></TextBlock>
         </Border>
         <Button Content="Delete section" HorizontalAlignment="Center" Margin="240,277,449,142" VerticalAlignment="Center" Width="160" Height="50" FontSize="25" Click="bt_Delete_Section" Grid.Row="1"/>
         <Button x:Name="bt_delete_Comment_" Content="Delete Comment" HorizontalAlignment="Center" Margin="4,279,97,140" VerticalAlignment="Center" Width="250" Height="50" FontSize="30" Grid.Row="1" IsEnabled="False" RenderTransformOrigin="-0.086,0.683" Click="bt_Delete_Comment" Grid.Column="1"/>
